@@ -1,0 +1,1 @@
+Minimal client to access the 'GitHub' 'API'.
